# pagame

./: LICENCE  LICENCE.REMOVED.git-id  LICENSE.REMOVED.git-id  README.md.REMOVED.git-id  README.txt  README.txt.REMOVED.git-id  executable.py  executable.py.REMOVED.git-id  play.py.REMOVED.git-id  requirements.txt  setup.cfg  setup.cfg.REMOVED.git-id  setup.py.REMOVED.git-id
.github/workflows/: build.yml  build.yml.REMOVED.git-id
application/: Linux
examples/: example_game.py  example_game.py.REMOVED.git-id  example_norsk_personlig.py  example_norsk_personlig.py.REMOVED.git-id
lookup/icons/: continue.png.REMOVED.git-id
pagame/: __main__.py.REMOVED.git-id  contestants.py.REMOVED.git-id  credentials.py.REMOVED.git-id  draw.py.REMOVED.git-id  game.py  game.py.REMOVED.git-id  settings.py  settings.py.REMOVED.git-id  sound.py.REMOVED.git-id
pagame/lookup/icons/: add.png.REMOVED.git-id  icon.icns  icon.icns.REMOVED.git-id  icon.ico.REMOVED.git-id  volume-down.png.REMOVED.git-id  volume-up.png.REMOVED.git-id
pagame/lookup/textfiles/: categories.txt.REMOVED.git-id  (+1 more)
src/game/: contestants.py  contestants.py.REMOVED.git-id  drinking.py  drinking.py.REMOVED.git-id  sound.py  sound.py.REMOVED.git-id
src/norsk_personlig/: SPILL.py  SPILL.py.REMOVED.git-id  __init__.py  __init__.py.REMOVED.git-id  deltakere.py  deltakere.py.REMOVED.git-id  drikkelek.py  drikkelek.py.REMOVED.git-id  lek.py  lek.py.REMOVED.git-id  lyd.py  lyd.py.REMOVED.git-id
src/party/: __init__.py  __init__.py.REMOVED.git-id  contestants.py  contestants.py.REMOVED.git-id  game.py  game.py.REMOVED.git-id  sound.py  sound.py.REMOVED.git-id
utilities/: contestants.py.REMOVED.git-id  game.py.REMOVED.git-id  sound.py.REMOVED.git-id
(+16 files in other folders)
