[metadata]
name = game

version = attr: game.__version__
author = attr: game.__author__
author_email = attr: game.__email__

description = Drinking game.
long_description = file: README.txt
long_description_content_type = text

url = https://github.com/hallvardnmbu/DrinkingGame.git

license = MIT License

classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Youth
    Topic :: Games/Entertainment

[options]
python_requires = >=3.10
install_requires =
    gtts
    pygame
    spotipy

package_dir =
    = src
packages = find:

scripts =
    examples/example_game.py

[options.packages.find]
where = src

[flake8]
max-line-length = 100